fix: animation clipping in mobile view

--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -70,7 +70,7 @@
 @keyframes pushedin{
     from{
         opacity: 0.1;
-        padding:2rem;
+        padding:1.3rem;
     }
     to{
         opacity: 1;
